compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__pure_standard_library_function.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\nimport gleam/dict\n\npub fn main() {\n  dict.insert(dict.new(), 1, 2)\n  Nil\n}\n"
---
----- SOURCE CODE
-- gleam/dict.gleam

pub type Dict(key, value)

pub fn new() -> Dict(a, b) { panic }

@external(erlang, "map", "insert")
pub fn insert(dict: Dict(key, value), key: key, value: value) -> Dict(key, value)


-- main.gleam

import gleam/dict

pub fn main() {
  dict.insert(dict.new(), 1, 2)
  Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:5:3
  │
5 │   dict.insert(dict.new(), 1, 2)
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might way to assign it to a variable, or
delete the expression entirely if it not needed.
