compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__record_update_warnings_test2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub type Person {\n            Person(name: String, age: Int)\n        }\n        pub fn update_person() {\n            let past = Person(\"Quinn\", 27)\n            let present = Person(..past)\n            present\n        }"
---
warning: Fieldless record update
  ┌─ /src/warning/wrn.gleam:7:27
  │
7 │             let present = Person(..past)
  │                           ^^^^^^^^^^^^^^ This record update doesn't change any fields

Hint: Add some fields to change or replace it with the record itself.
